--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "le-store-certbot",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "The \"certbot\" storage strategy for Greenlock.js",
   "main": "index.js",
   "scripts": {
@@ -23,8 +23,10 @@
     "url": "https://git.coolaj86.com/coolaj86/le-store-certbot.js/issues"
   },
   "homepage": "https://git.coolaj86.com/coolaj86/le-store-certbot.js",
+  "trulyOptionalDependencies": {
+    "bluebird": "^3.5.1"
+  },
   "dependencies": {
-    "bluebird": "^3.5.1",
     "fs-symlink": "^1.2.1",
     "mkdirp": "^0.5.1",
     "pyconf": "^1.1.2",
