--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "le-store-certbot",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "The \"certbot\" storage strategy for Greenlock.js",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,6 @@
     "fs-symlink": "^1.2.1",
     "mkdirp": "^0.5.1",
     "pyconf": "^1.1.2",
-    "safe-replace": "^1.0.2"
+    "safe-replace": "spanasik/fs-safe-replace.js.git#7b8536d"
   }
 }
